# SafeSON

./: README.md  SPEC.md  dnt.ts
.github/workflows/: release.yml
js/: _test_deps.ts  const.ts  deserializer.ts  deserializer_test.ts  mod.ts  rle.ts  rle_test.ts  serializer.ts  test.ts
wasm/: Cargo.toml  build
wasm/pkg/: safeson.d.ts  safeson.js  safeson_bg.js  safeson_bg.wasm  safeson_bg.wasm.d.ts
wasm/src/: deserializer.rs  lib.rs  rle.rs  serializer.rs
wasm/tests/: integration.rs  integrity.rs
