[package]
name = "rbuf"
version = "0.1.0"
edition = "2021"
authors = ["Roj"]
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

[dev-dependencies]
js-sys-util = { git = "https://github.com/roj1512/js-sys-util" }
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
